--- a/HelloWpfApp/HelloWpfApp/HelloWpfApp.csproj
+++ b/HelloWpfApp/HelloWpfApp/HelloWpfApp.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NewRelic.Api.Agent">
+      <HintPath>C:\Program Files\New Relic\.NET Agent\NewRelic.Api.Agent.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
